{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 89,
  "lineage": "92c94f0f-ac93-fc41-2b40-d6d119a97429",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108782071278:vpc/vpc-0f0b60dd77acc5fd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-04b13e527edda612f",
            "default_route_table_id": "rtb-0ac7afcdc6cfca5a4",
            "default_security_group_id": "sg-0dbcb553a2ae07961",
            "dhcp_options_id": "dopt-0f427f1f43e21dd51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f0b60dd77acc5fd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac7afcdc6cfca5a4",
            "owner_id": "108782071278"
          }
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108782071278:security-group/sg-0b313626f1c21b130",
            "description": "This will add terraform integrated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b313626f1c21b130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "108782071278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0b60dd77acc5fd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108782071278:vpc/vpc-0f0b60dd77acc5fd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-04b13e527edda612f",
            "default_route_table_id": "rtb-0ac7afcdc6cfca5a4",
            "default_security_group_id": "sg-0dbcb553a2ae07961",
            "dhcp_options_id": "dopt-0f427f1f43e21dd51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f0b60dd77acc5fd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac7afcdc6cfca5a4",
            "owner_id": "108782071278"
          }
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108782071278:security-group/sg-0ea6a148b771ae865",
            "description": "This will add terraform integrated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea6a148b771ae865",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prd-infra-app-sg",
            "name_prefix": "",
            "owner_id": "108782071278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "Name": "prd-infra-app-sg"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0b60dd77acc5fd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prd-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108782071278:vpc/vpc-0f0b60dd77acc5fd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-04b13e527edda612f",
            "default_route_table_id": "rtb-0ac7afcdc6cfca5a4",
            "default_security_group_id": "sg-0dbcb553a2ae07961",
            "dhcp_options_id": "dopt-0f427f1f43e21dd51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f0b60dd77acc5fd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac7afcdc6cfca5a4",
            "owner_id": "108782071278"
          }
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108782071278:security-group/sg-098a1b3c908d279db",
            "description": "This will add terraform integrated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098a1b3c908d279db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stg-infra-app-sg",
            "name_prefix": "",
            "owner_id": "108782071278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-sg"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0b60dd77acc5fd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}